# nsens

./: .gitignore  README.md
nsens/: CMakeLists.txt  Dependencies.cmake  README.md  conanfile.txt
nsens/app/: CMakeLists.txt  main.cpp
nsens/src/: CMakeLists.txt  config.hpp  nsens.cpp  utils.hpp
nsens/src/include/nsens/: nsens.hpp
nsens/test/: CMakeLists.txt  nsenstests.cpp
